# rizza

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  HISTORY.rst  LICENSE  README.md  lint.rc  pyproject.toml  setup.py
.github/workflows/: code_ql.yml  quality_checks.yml
config/: rizza.pconf.example  rizza.yaml  rizza.yaml.example  server_configs.json  server_configs.json.example
data/genetic_tests/: Organization.yaml
rizza/: __main__.py  apix_loader.py  entity_tester.py  genetic_tester.py  genetics.py  task_manager.py
rizza/helpers/: config.py  genetics.py  inputs.py  logger.py  logging.py  misc.py  prune.py  text.py  typed_inputs.py
tests/: test_entity_tester.py  test_genetic_tester.py  test_genetics.py  test_task_manager.py
tests/data/: base_config.yaml  example.txt  nailgun.pconf  rizza.nconf  rizza.pconf  temp_export.txt  test_config.nconf  test_config.yaml
tests/helpers/: test_config.py  test_genetics.py  test_misc.py  test_text.py
